--- a/index.html
+++ b/index.html
@@ -4,7 +4,202 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <title>Оно тебе надо</title>
+    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header-menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a href="" class="header__link header__link_active">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a href="" class="header__link">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a href="" class="header__link">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+
+      <a class="header__logo"
+        ><img
+          src="./images/logo-black.svg"
+          alt="Логотип сайта чёрного цвета"
+          class="header__logo-image logo-black"
+      /></a>
+
+      <div class="address header__address">
+        <a href="tel:+9 999 555 5555">+9 999 555 5555</a><br />
+        <a href="mailto:info@sobaka.ge">minfo@sobaka.ge</a>
+        <address>наб. Принсенграхт 263-<br />265, Амстердам</address>
+      </div>
+    </header>
+
+    <main>
+      <!-- ========================= COVER SECTION =========================-->
+      <section class="cover">
+        <h1 class="cover__title">
+          <span class="aligned-text"
+            >о<span class="letter-spacing-extended">н</span>о</span
+          >
+          <span class="aligned-text aligned-text_center"
+            >те<span class="letter-spacing-extended">б</span>е</span
+          >
+          <span class="aligned-text aligned-text_right"
+            ><span class="letter-spacing-extended">н</span>ад<span
+              class="no-letter-spacing"
+              >о</span
+            ></span
+          >
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+      </section>
+
+      <!-- ========================= LOTS SECTION =========================-->
+      <section class="lots">
+        <h1 class="lots__heading">Лоты</h1>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a href="#0" class="card-link">
+              <article class="card card_type_film">
+                <h2 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h2>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+
+          <li class="lots__card-list-item">
+            <a href="#0" class="card-link">
+              <article class="card card_type_book">
+                <h2 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h2>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+
+          <li class="lots__card-list-item">
+            <a href="#0" class="card-link">
+              <article class="card card_type_picture">
+                <h2 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h2>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a href="" class="lots__look-more-link">посмотреть больше</a>
+      </section>
+
+      <!-- ========================= ABOUT SECTION =========================-->
+      <section class="about">
+        <div class="about__column about__column-logo">
+          <div class="about__logo ">
+            <img
+              src="./images/logo-white.svg"
+              alt="Логотип сайта белого цвета"
+              class="about__logo-image"
+            />
+          </div>
+        </div>
+
+        <div class="about__column about__column-text">
+          <h1 class="about__title">Об аукционе</h1>
+          <p class="about__text about__text-margin">
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p class="about__text">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="address footer__address">
+        <a href="tel:+9 999 555 5555">+9 999 555 5555</a><br />
+        <a href="mailto:info@sobaka.ge">minfo@sobaka.ge</a>
+        <address>наб. Принсенграхт 263-<br />265, Амстердам</address>
+      </div>
+
+      <nav class="footer-menu">
+        <ul class="footer__links-list">
+          <li class="footer__links-list-item footer__links-list-item_no-bullit">
+            <a href="#0" class="footer__link footer__link_active">главная</a>
+          </li>
+          <li class="footer__links-list-item">
+            <a href="#0" class="footer__link">посмотреть лоты</a>
+          </li>
+          <li class="footer__links-list-item">
+            <a href="#0" class="footer__link">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item no-margin">
+          <a href="#0" class="footer__social-link">
+            <img src="./images/yt.svg" alt="Логотип ютуба" class="footer__social-icon" />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="#0" class="footer__social-link">
+            <img src="./images/vk.svg" alt="Логтип вконтакте" class="footer__social-icon" />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="#0" class="footer__social-link">
+            <img
+              src="./images/pinterest.svg"
+              alt="Логотип пинтерест"
+              class="footer__social-icon"
+            />
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
+
+<!-- 
+  Картина, которую повторит даже 5-летний сын маминой подруги
+Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+ -->
