--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       /></a>
 
       <div class="address header__address">
-        <a href="tel:+9 999 555 5555">+9 999 555 5555</a><br />
+        <a href="tel:+99995555555">+9 999 555 5555</a><br />
         <a href="mailto:info@sobaka.ge">minfo@sobaka.ge</a>
         <address>наб. Принсенграхт 263-<br />265, Амстердам</address>
       </div>
@@ -155,7 +155,7 @@
 
     <footer class="footer">
       <div class="address footer__address">
-        <a href="tel:+9 999 555 5555">+9 999 555 5555</a><br />
+        <a href="tel:+99995555555">+9 999 555 5555</a><br />
         <a href="mailto:info@sobaka.ge">minfo@sobaka.ge</a>
         <address>наб. Принсенграхт 263-<br />265, Амстердам</address>
       </div>
