исправлены ошибки в глобал стайл и индекс

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
           class="header__logo-image logo-black"
       /></a>
 
-      <div class="address header__address">
+      <address class="address header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br />
         <a href="mailto:info@sobaka.ge">minfo@sobaka.ge</a>
-        <address>наб. Принсенграхт 263-<br />265, Амстердам</address>
-      </div>
+        <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
+      </address>
     </header>
 
     <main>
@@ -66,14 +66,14 @@
 
       <!-- ========================= LOTS SECTION =========================-->
       <section class="lots">
-        <h1 class="lots__heading">Лоты</h1>
+        <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
             <a href="#0" class="card-link">
               <article class="card card_type_film">
-                <h2 class="card__title">
+                <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
-                </h2>
+                </h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -86,9 +86,9 @@
           <li class="lots__card-list-item">
             <a href="#0" class="card-link">
               <article class="card card_type_book">
-                <h2 class="card__title">
+                <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
-                </h2>
+                </h3>
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
@@ -104,9 +104,9 @@
           <li class="lots__card-list-item">
             <a href="#0" class="card-link">
               <article class="card card_type_picture">
-                <h2 class="card__title">
+                <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
-                </h2>
+                </h3>
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -133,8 +133,8 @@
         </div>
 
         <div class="about__column about__column-text">
-          <h1 class="about__title">Об аукционе</h1>
-          <p class="about__text about__text-margin">
+          <h2 class="about__title">Об аукционе</h2>
+          <p class="about__text">
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
@@ -153,12 +153,14 @@
       </section>
     </main>
 
+
+    <!-- ========================= FOOTER =========================-->
     <footer class="footer">
-      <div class="address footer__address">
+      <address class="address footer__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br />
         <a href="mailto:info@sobaka.ge">minfo@sobaka.ge</a>
-        <address>наб. Принсенграхт 263-<br />265, Амстердам</address>
-      </div>
+        <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
+      </address>
 
       <nav class="footer-menu">
         <ul class="footer__links-list">
